Fix responsive integration on tablet

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,24 +14,14 @@
 
 /* Landing Page */
 body {
-  /* margin: 0; */
-  /* display: flex;
-  flex-direction: column; */
-  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
-  /* max-width: 1300px; */
   width: 100vw;
   height: 100vh;
 }
 
 p {
-  /* margin-bottom: 0; */
   padding: 1rem;
-}
-
-img {
-  /* padding-right: 1rem; */
 }
 
 .topnav {
@@ -44,9 +34,11 @@ img {
 .header-logo {
   padding-left: 3rem;
 }
-.main-navbar {
-  /* float: right; */
+
+.header-logo img {
+  width: 200px;
 }
+
 .topnav a {
   float: left;
   display: block;
@@ -62,7 +54,7 @@ img {
 .topnav a:hover {
   background-color: #ff0000;
   color: #ffffff;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .topnav a.active {
@@ -75,7 +67,7 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .topnav a {
     display: none;
   }
@@ -85,7 +77,7 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .topnav.responsive {
     position: relative;
   }
@@ -102,14 +94,13 @@ img {
   }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 1024px) {
   .topnav a {
     display: none;
   }
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 }
 
@@ -430,7 +421,6 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
 }
 .hero-content::after {
   content: "";
@@ -451,7 +441,7 @@ input[data-error]::after {
   white-space: nowrap;
 }
 .hero-text {
-  width: 146%;
+  min-width: 424px;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -465,7 +455,7 @@ input[data-error]::after {
   margin-top: 59px;
 }
 .hero-img {
-  grid-column: span 8;
+  grid-column: span 9;
 }
 .hero-img img {
   width: 100%;
@@ -489,7 +479,7 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
   .hero-section {
     display: block;
     box-shadow: unset;
